# portfolio

./: .gitignore  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts  wrangler.toml
fluid/: Cargo.toml
fluid/src/: lib.rs
render/: Cargo.toml
render/src/: lib.rs  parse.rs
render/src/shader/: world.wgsl
src/: app.css  app.html  app.tsx  index.css  router.tsx
src/components/: Banner.css  Banner.tsx  Header.css  Header.tsx  Link.css  Link.tsx  ParseTree.css  ParseTree.tsx  Physics.css  Physics.tsx  Shark.css  Shark.tsx  SkillsSimulation.css  SkillsSimulation.tsx  Terrain.css  Terrain.tsx
src/lib/: banner.svelte  link.svelte
src/lib/typst/: Typst.svelte  typst-compiler.server.ts
src/pages/: About.tsx  Contact.css  Contact.tsx  Home.css  Home.tsx  Parsers.css  Parsers.tsx  Sharks.css  Sharks.tsx  Skills.css  Skills.tsx  index.tsx
src/routes/: +layout.svelte  +page.svelte
src/routes/blog/: +page.svelte
src/routes/blog/[slug]/: +page.server.ts  +page.svelte  fluid.ts
src/routes/parsers/: +page.svelte  tree.ts
src/routes/sharks/: +page.svelte
src/routes/skills/: +page.svelte
src/routes/typst/[...path].typc/: +server.ts
src/typ/: foo.typ  sewable-fluid.typ
