[package]
name = "fluid"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"

fl-sim = { path = "../../rust/fluid-sim/fl-sim", features = ["demo"] }
nalgebra = { version = "0.34.1", default-features = false }
