[package]
name = "render"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.27"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
wgpu = { version = "25.0.0", default-features = false, features = ["webgl", "wgsl"] }
